fix some spacing on index so it feels less cramped

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -151,6 +151,7 @@ body{
 
 .question-content {
   color: #FFFF00;
+  padding: 10px;
 }
 
 /* answers */
